# repowire

./: .coverage  .gitignore  CLAUDE.md  CLAUDE.md.bak  Dockerfile  README.md  pyproject.toml
.claude/rules/: electron.md
.claude/skills/integration-test/: SKILL.md
.claude/skills/textual/: SKILL.md
.github/workflows/: publish.yml  relay.yml
.opencode/plugin/: repowire.ts
deploy/: Dockerfile
experiments/datastar-dashboard/: README.md  dashboard.py
experiments/datastar-dashboard/templates/: dashboard.html
project-documents/user/architecture/: 100-arch.vscode-channel-fixes.md  100-slices.vscode-channel-fixes.md
project-documents/user/reference/: repowire-vscode-context.md  (+1 more)
repowire/: cli.py  spawn.py
repowire/backends/: __init__.py  base.py
repowire/channel/: .mcp.json  package.json  server.ts
repowire/config/: models.py
repowire/daemon/: __init__.py  app.py  core.py  deps.py  peer_registry.py  query_tracker.py  relay_client.py  websocket_manager.py  websocket_transport.py
repowire/hooks/: _tmux.py  installer.py  prompt_handler.py  session_handler.py  stop_handler.py  utils.py  websocket_hook.py
repowire/installers/: claude_code.py  opencode.py
repowire/mcp/: server.py
repowire/protocol/: peers.py
repowire/relay/: auth.py  dashboard.py  server.py
repowire/service/: __init__.py  installer.py
repowire/session/: transcript.py
repowire/telegram/: bot.py
repowire/tui/: __init__.py  app.py  styles.tcss
tests/: test_auth.py  test_circles.py  test_config.py  test_ghost_eviction.py  test_hooks.py  test_hooks_handlers.py  test_hooks_installer.py  test_lazy_repair.py  test_protocol.py  test_query_tracker.py  test_relay.py  test_routes.py  test_service_installer.py  test_session_handler.py  test_spawn.py  test_sse_stream.py  test_transcript.py  test_tui_services.py  test_tui_widgets.py
web/: index.html
web/app/: layout.tsx
web/components/: Installation.tsx
(+50 files in other folders)
